@@ -17,11 +17,18 @@ import com.vaadin.flow.router.Route;
 import com.vaadin.flow.spring.annotation.SpringComponent;
 import com.vaadin.flow.spring.annotation.UIScope;
 
+// Neue Imports für Sauberkeit und Markdown
+import org.commonmark.node.Node;
+import org.commonmark.parser.Parser;
+import org.commonmark.renderer.html.HtmlRenderer;
+import org.json.JSONObject;
+
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
-import java.sql.SQLOutput;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @SpringComponent
 @UIScope
@@ -32,7 +39,7 @@ public class SmartMealView extends HorizontalLayout {
     public SmartMealView() {
         setSizeFull();
 
-        // Linke Navigationsleiste
+        // --- Linke Navigationsleiste ---
         VerticalLayout navBar = new VerticalLayout();
         navBar.addClassName("navbar");
         navBar.setWidth("20%");
@@ -40,30 +47,19 @@ public class SmartMealView extends HorizontalLayout {
         navBar.setSpacing(true);
         navBar.setDefaultHorizontalComponentAlignment(FlexComponent.Alignment.START);
 
-        // Navbar-Inhalt
-        Image img = new Image("fit.png", "logo");
-        img.setWidth("150px");
-        img.setHeight("80px");
-
-
         Div logoDiv = new Div();
         logoDiv.setWidth("250px");
         logoDiv.setHeight("100px");
         logoDiv.getStyle().set("background-image", "url('logo2.png')");
-        logoDiv.getStyle().set("background-size", "contain");  // passt Bild an Div an
+        logoDiv.getStyle().set("background-size", "contain");
         logoDiv.getStyle().set("background-repeat", "no-repeat");
         logoDiv.getStyle().set("background-position", "center");
 
-
-
         Div spacer = new Div();
-        spacer.setHeight("100px");// Abstand wie 5 Leerzeilen
-
-
-
+        spacer.setHeight("100px");
 
         Anchor impressumLink = new Anchor("https://www.fit.fraunhofer.de/de/jobs.html", "Impressum");
-        impressumLink.setTarget("_blank"); // öffnet in neuem Tab
+        impressumLink.setTarget("_blank");
 
         Anchor datenschutzLink = new Anchor("https://www.fit.fraunhofer.de/de/jobs.html", "Datenschutzinformation");
         datenschutzLink.setTarget("_blank");
@@ -71,46 +67,39 @@ public class SmartMealView extends HorizontalLayout {
         Anchor barrierefreiheitLink = new Anchor("https://www.fit.fraunhofer.de/de/jobs.html", "Barrierefreiheitserklärung");
         barrierefreiheitLink.setTarget("_blank");
 
-
-        // Icons
+        // Icons & Layouts
         Icon checkIcon = new Icon(VaadinIcon.CHECK_CIRCLE);
-        checkIcon.setSize("14px"); // Größe anpassen
-        checkIcon.getStyle().set("margin-left", "5px");
-        HorizontalLayout barriereLayout = new HorizontalLayout( checkIcon , barrierefreiheitLink);
+        checkIcon.setSize("14px");
+        HorizontalLayout barriereLayout = new HorizontalLayout(checkIcon, barrierefreiheitLink);
         barriereLayout.setAlignItems(FlexComponent.Alignment.CENTER);
 
         Icon bookIcon = new Icon(VaadinIcon.OPEN_BOOK);
         bookIcon.setSize("14px");
-        bookIcon.getStyle().set("margin-left", "5px");
-        HorizontalLayout datenschutzLayout = new HorizontalLayout(bookIcon , datenschutzLink);
+        HorizontalLayout datenschutzLayout = new HorizontalLayout(bookIcon, datenschutzLink);
         datenschutzLayout.setAlignItems(FlexComponent.Alignment.CENTER);
 
-        Icon caretIcon =  new Icon(VaadinIcon.CLOCK);
+        Icon caretIcon = new Icon(VaadinIcon.CLOCK);
         caretIcon.setSize("14px");
-        caretIcon.getStyle().set("margin-left", "5px");
-        HorizontalLayout impressumLayout = new HorizontalLayout(caretIcon ,impressumLink);
+        HorizontalLayout impressumLayout = new HorizontalLayout(caretIcon, impressumLink);
         impressumLayout.setAlignItems(FlexComponent.Alignment.CENTER);
-
 
         Div chatLabel = new Div();
         chatLabel.setText("Chat-Bot");
-        chatLabel.getStyle().set("margin-top", "auto"); // nach unten schieben
+        chatLabel.getStyle().set("margin-top", "auto");
         chatLabel.getStyle().set("font-size", "24px");
         chatLabel.getStyle().set("font-weight", "bold");
         chatLabel.getStyle().set("color", "white");
         chatLabel.getStyle().set("font-style", "italic");
 
+        navBar.add(logoDiv, spacer, impressumLayout, datenschutzLayout, barriereLayout, chatLabel);
 
-
-        navBar.add(logoDiv ,spacer , impressumLayout,  datenschutzLayout,  barriereLayout , chatLabel );
-
-        // Hauptbereich für Chat
+        // --- Hauptbereich ---
         VerticalLayout mainLayout = new VerticalLayout();
         mainLayout.setSizeFull();
         mainLayout.setPadding(false);
         mainLayout.setSpacing(false);
 
-        // Header mit Buttons
+        // Header
         HorizontalLayout header = new HorizontalLayout();
         header.addClassName("chat-header");
         header.setWidthFull();
@@ -118,166 +107,149 @@ public class SmartMealView extends HorizontalLayout {
         Button chatbotButton = new Button("Chat-Bot");
         chatbotButton.addClassName("button-chatbot");
 
-
-
-
         Button ragBotButton = new Button("RAG-Bot");
         ragBotButton.addClassName("button-ragbot");
-
+        ragBotButton.addClickListener(event -> getUI().ifPresent(ui -> ui.navigate("ragBot")));
 
         header.add(chatbotButton, ragBotButton);
         header.setAlignItems(FlexComponent.Alignment.CENTER);
 
-        ragBotButton.addClickListener(event -> {
-            getUI().ifPresent(ui -> ui.navigate("ragBot")); // Navigiert zur neuen View
-        });
-
-
-
-        // Titel im Chatbereich
-        H1 chatTitle = new H1(" Dieser Chat-bot beantwortet Fragen basierend auf der OpenAI-Datenbank");
+        // Titel
+        H1 chatTitle = new H1("Dieser Chat-Bot beantwortet Fragen basierend auf der OpenAI-Datenbank");
         chatTitle.addClassName("chat-title");
 
-        // Bereich für Nachrichten (dynamisch)
+        // Nachrichtenbereich
         Div messageArea = new Div();
         messageArea.setWidthFull();
-        //messageArea.getStyle().set("max-height", "70vh"); // wächst bis max. 70% der Seite
-        messageArea.getStyle().set("overflow-y", "auto"); // Scrollbar nur wenn nötig
-        messageArea.getStyle().set("padding", "10px");
+        messageArea.getStyle().set("overflow-y", "auto");
+        messageArea.getStyle().set("padding", "20px");
         messageArea.getStyle().set("background-color", "#FFFFFF");
-        messageArea.setText("\uD83E\uDD16 Hier steht die Antwort des LLM...");
-        messageArea.getStyle().set("font-style", "italic");
+        
+        Div initialMessage = new Div();
+        initialMessage.setText("\uD83E\uDD16 Hallo! Wie kann ich dir heute helfen?");
+        initialMessage.getStyle().set("font-style", "italic");
+        initialMessage.getStyle().set("color", "gray");
+        messageArea.add(initialMessage);
 
-
-        // Eingabefeld (mehrzeilig) und Senden Button
+        // Eingabebereich
         HorizontalLayout inputLayout = new HorizontalLayout();
         inputLayout.setWidthFull();
         TextArea inputField = new TextArea();
         inputField.setPlaceholder("Wie kann ich dir weiterhelfen?");
         inputField.addClassName("input-field");
         inputField.setWidthFull();
-        inputField.getStyle().set("resize", "none");  // verhindert manuelles Ändern
+        inputField.getStyle().set("resize", "none");
 
-        // Dynamisches Wachsen JavaScript Code
+        // Dynamisches Wachsen
         inputField.getElement().executeJs(
                 "this.style.height='auto';" +
-                        "this.style.overflowY='hidden';" +
-                        "this.addEventListener('input', function() {" +
-                        "  this.style.height='auto';" +               // zurücksetzen
-                        "  this.style.height=(this.scrollHeight) + 'px';" + // an Inhalt anpassen
-                        "});"
+                "this.addEventListener('input', function() {" +
+                "  this.style.height='auto';" +
+                "  this.style.height=(this.scrollHeight) + 'px';" +
+                "});"
         );
-
 
         Button sendButton = new Button(new Icon(VaadinIcon.PAPERPLANE));
         sendButton.addClassName("send-button");
 
-        //Micro
         Button micButton = new Button(new Icon(VaadinIcon.MICROPHONE));
         micButton.addClassName("mic-button");
-        micButton.getElement().setAttribute("title", "Spracheingabe starten");
         micButton.addClickListener(e -> {
             inputField.getElement().executeJs(
-                    "if (!('webkitSpeechRecognition' in window)) {" +
-                            "  alert('Dein Browser unterstützt keine Spracherkennung');" +
-                            "} else {" +
-                            "  var recognition = new webkitSpeechRecognition();" +
-                            "  recognition.lang = 'de-DE';" +
-                            "  recognition.interimResults = false;" +
-                            "  recognition.maxAlternatives = 1;" +
-                            "  recognition.onresult = function(event) {" +
-                            "    let text = event.results[0][0].transcript;" +
-                            "    $0.value = text;" +
-                            "    $0.dispatchEvent(new Event('input', { bubbles: true }));" +   // wichtig für Vaadin
-                            "    $0.dispatchEvent(new Event('change', { bubbles: true }));" + // extra, falls nötig
-                            "  };" +
-                            "  recognition.start();" +
-                            "}"
-                    , inputField.getElement());
+                "if (!('webkitSpeechRecognition' in window)) { alert('Browser nicht unterstützt'); } " +
+                "else { var recognition = new webkitSpeechRecognition(); recognition.lang = 'de-DE'; " +
+                "recognition.onresult = function(event) { $0.value = event.results[0][0].transcript; " +
+                "$0.dispatchEvent(new Event('input', { bubbles: true })); }; recognition.start(); }", inputField.getElement());
         });
 
-        inputLayout.add(inputField, sendButton , micButton);
+        inputLayout.add(inputField, sendButton, micButton);
         inputLayout.setFlexGrow(1, inputField);
 
-
-
-        // Klick-Listener: Anfrage an Backend senden
+        // --- Senden Logik ---
         sendButton.addClickListener(e -> {
             String query = inputField.getValue().trim();
             if (!query.isEmpty()) {
-                String jsonResponse = callBackend(query);
+                // Backend Aufruf
+                String rawJson = callBackend(query);
+                
+                // JSON säubern
+                String cleanText = extractResponseFromJson(rawJson);
 
-                // Nutzer-Nachricht anzeigen
-                Div userMessage = new Div();
-                userMessage.setText("User Frage :" + query);
-                userMessage.getStyle().set("font-weight", "bold");
-                userMessage.getStyle().set("margin-bottom", "5px");
-                messageArea.add(userMessage);
+                // User Nachricht
+                Div userMsg = new Div();
+                userMsg.setText("Ich: " + query);
+                userMsg.getStyle().set("font-weight", "bold");
+                userMsg.getStyle().set("margin-bottom", "5px");
+                messageArea.add(userMsg);
 
-                // Bot-Antwort anzeigen
-                Div botMessage = new Div();
-                botMessage.setText("Antwort: " + jsonResponse);
-                botMessage.getStyle().set("margin-bottom", "10px");
-                botMessage.getStyle().set("background-color", "#E5E7EB");
-                botMessage.getStyle().set("padding", "5px");
-                botMessage.getStyle().set("border-radius", "5px");
-                messageArea.add(botMessage);
+                // Bot Nachricht (Markdown gerendert)
+                Div botMsg = new Div();
+                botMsg.getStyle().set("background-color", "#F3F4F6");
+                botMsg.getStyle().set("padding", "10px");
+                botMsg.getStyle().set("border-radius", "8px");
+                botMsg.getStyle().set("margin-bottom", "15px");
+                
+                String htmlResponse = convertMarkdownToHtml(cleanText);
+                botMsg.getElement().setProperty("innerHTML", htmlResponse);
+                
+                messageArea.add(botMsg);
 
-                // Scrollen nach unten
+                // UI Reset
                 messageArea.getElement().executeJs("this.scrollTop = this.scrollHeight");
-
-                // Eingabefeld leeren
                 inputField.clear();
-
-                // Eingabefeld wieder klein machen
-                inputField.getElement().executeJs(
-                        "this.style.height='auto';" +
-                                "this.style.overflowY='hidden';"
-                );
-
-
+                inputField.getElement().executeJs("this.style.height='auto';");
             } else {
-                Notification.show("Bitte geben Sie eine Frage ein!");
+                Notification.show("Bitte gib eine Frage ein.");
             }
         });
 
-
-        // Alles zum mainLayout hinzufügen
         mainLayout.add(header, chatTitle, messageArea, inputLayout);
         mainLayout.expand(messageArea);
 
-        // Hauptlayout zusammenbauen
         add(navBar, mainLayout);
         setFlexGrow(1, mainLayout);
     }
 
+    // --- Hilfsmethoden ---
 
+    private String extractResponseFromJson(String jsonString) {
+        try {
+            if (jsonString.trim().startsWith("{")) {
+                JSONObject json = new JSONObject(jsonString);
+                return json.getString("response");
+            }
+        } catch (Exception e) {
+            // Falls es kein JSON ist oder das Feld fehlt
+        }
+        return jsonString; 
+    }
 
-    // Methode: Anfrage an dein Spring Boot Backend
+    private String convertMarkdownToHtml(String markdown) {
+        if (markdown == null || markdown.isEmpty()) return "";
+        Parser parser = Parser.builder().build();
+        Node document = parser.parse(markdown);
+        HtmlRenderer renderer = HtmlRenderer.builder().build();
+        return renderer.render(document);
+    }
+
     private String callBackend(String question) {
         try {
-            String urlString = "http://localhost:8070/askLLM?question=" + java.net.URLEncoder.encode(question, "UTF-8");
+            String urlString = "http://localhost:8070/askLLM?question=" + URLEncoder.encode(question, StandardCharsets.UTF_8);
             URL url = new URL(urlString);
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Accept", "text/plain");
 
-            BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream()));
-            String inputLine;
+            BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8));
             StringBuilder response = new StringBuilder();
-
-            while ((inputLine = in.readLine()) != null) {
-                response.append(inputLine);
+            String line;
+            while ((line = in.readLine()) != null) {
+                response.append(line);
             }
             in.close();
-            conn.disconnect();
-
             return response.toString();
         } catch (Exception e) {
-            e.printStackTrace();
-            return "Fehler beim Abrufen der Antwort vom Backend.";
+            return "Fehler beim Abrufen der Antwort.";
         }
     }
-
-
 }
